--- a/index.html
+++ b/index.html
@@ -98,19 +98,31 @@
         </div>
 
         <div class="project">
-          <img src="./img/portfolio/01.jpg" alt="" />
+          <img
+            src="./img/portfolio/01.jpg"
+            alt=""
+            class="project-img"
+          />
           <h3 class="project-title">
             <a href="#!">Online fashion store - Homepage</a>
           </h3>
         </div>
 
         <div class="project">
-          <img src="./img/portfolio/02.jpg" alt="" />
+          <img
+            src="./img/portfolio/02.jpg"
+            alt=""
+            class="project-img"
+          />
           <h3 class="project-title"><a href="#!">Reebok Store - Concep</a></h3>
         </div>
 
         <div class="project">
-          <img src="./img/portfolio/03.jpg" alt="" />
+          <img
+            src="./img/portfolio/03.jpg"
+            alt=""
+            class="project-img"
+          />
           <h3 class="project-title">
             <a href="#!">Braun Landing Page - Concept</a>
           </h3>
@@ -126,7 +138,7 @@
 
         <div class="contacts-content">
           <p>
-            Want to know more or just chat?<br/>
+            Want to know more or just chat?<br />
             You are welcome!
           </p>
         </div>
@@ -144,7 +156,7 @@
 
         <div class="contacts-footer">
           <p>
-            Like me on<br/>
+            Like me on<br />
             LinkedIn, Instagram, Behance, Dribble
           </p>
         </div>
